[tool.poetry]
name = "uhsafclassifier"
version = "1.0.0"
description = ""
authors = ["leynier <leynier41@gmail.com>"]
homepage = "https://github.com/leynier/uhsafclassifier-api"
repository = "https://github.com/leynier/uhsafclassifier-api"
documentation = "https://github.com/leynier/uhsafclassifier-api"
readme = "README.md"

[tool.poetry.scripts]
uhsafclassifier = "uhsafclassifier.main:typer_app"

[tool.poetry.dependencies]
python = "^3.7.1"
fastapi = {extras = ["all"], version = "^0.67.0"}
pandas = "^1.3.1"
odmantic = "^0.3.5"
typer = "^0.3.2"
xlrd = "^2.0.1"
xlwt = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"
black = "^21.7b0"
isort = "^5.9.3"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
