[tool.poetry]
name = "uhsafclassifier"
version = "1.0.0"
description = ""
authors = ["leynier <leynier41@gmail.com>"]
homepage = "https://github.com/leynier/uhsafclassifier-api"
repository = "https://github.com/leynier/uhsafclassifier-api"
documentation = "https://github.com/leynier/uhsafclassifier-api"
readme = "README.md"

[tool.poetry.scripts]
uhsafclassifier = "uhsafclassifier.main:typer_app"

[tool.poetry.dependencies]
python = "^3.7.1"
fastapi = {extras = ["all"], version = "^0.75.0"}
pandas = "^1.3.5"
odmantic = "^0.3.5"
typer = "^0.4.1"
xlrd = "^2.0.1"
xlwt = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
flake8 = "^4.0.1"
black = "^22.3"
isort = "^5.10.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
